# palantir-stock

./: .env.example  .gitignore  CLAUDE.md  DESCRIPTION.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: branch-manager.md  code-reviewer.md  commit-helper.md  dev-docs-writer.md  git-troubleshooter.md  phase-tracker.md  pr-creator.md  progress-tracker.md  project-analyzer.md  refactor-assistant.md  test-helper.md
.claude/hooks/: post-tool-use-tracker.sh
.claude/skills/: init.md
config/: __init__.py  settings.py
docs/: PALANTIR_ACCESS_GUIDE.md  PRD.md
src/: __init__.py  main.py
src/agents/: __init__.py  nodes.py  orchestrator.py
src/api/: __init__.py  main.py  schemas.py
src/api/routes/: __init__.py  analyze.py  graph.py  reports.py  stock.py
src/graph/: __init__.py  client.py  extractor.py  hybrid.py  repository.py  schema.py  vector_store.py
src/models/: __init__.py  schemas.py
src/palantir/: __init__.py  client.py  datasets.py  ontology.py
src/reports/: __init__.py  generator.py  templates.py
src/search/: __init__.py  base.py  factory.py  serpapi.py  tavily.py
src/stock/: __init__.py  client.py  indicators.py  models.py
src/utils/: __init__.py  llm.py  logging.py
tests/: __init__.py  conftest.py  test_cli.py
tests/test_agents/: __init__.py  test_nodes.py
tests/test_palantir/: __init__.py  test_client.py
tests/test_search/: __init__.py  test_factory.py  test_providers.py
